--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -17,7 +17,7 @@
     "keen-slider": "^6.8.6",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+    "next": "^16.1.6",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
